--- a/pre/scss/pages/_personal.scss
+++ b/pre/scss/pages/_personal.scss
@@ -14,7 +14,7 @@
         }
     }
 
-    .linense {
+    .license {
         flex: 55%;
         flex-grow: 0;
 
@@ -149,79 +149,81 @@
 
         .card-content {
             height: 100%;
-            display: grid;
-            grid-template-rows: size(40) size(40) 1fr;
-            grid-template-columns: calc(50% - size(10)) size(20) calc(50% - size(10) - size(112)) size(112);
+            display: flex;
+            flex-direction: column;
+            gap: size(40);
 
-            h3 {
-                grid-row: 1 / 2;
-                grid-column: 1 / 2;
+            .title {
+                flex: 1;
                 display: flex;
-                align-items: center;
 
-                i {
-                    font-size: size(20);
+                h3 {
+                    flex: 60%;
+                    flex-grow: 1;
+                    display: flex;
+                    align-items: center;
+
+                    i {
+                        font-size: size(20);
+                    }
                 }
-            }
 
-            button {
-                grid-row: 1 / 2;
-                grid-column: -1 / -2;
-                @include body-2;
-            }
-
-            .now,
-            .accumulation {
-                grid-row: -1 / -2;
-                border-radius: size(30);
-                background-color: color(gray-9);
-                padding: size(20) 0;
-                display: flex;
-                flex-direction: column;
-                align-items: center;
-
-                h6,
-                .value,
                 button {
                     flex: 1;
+                    min-width: size(112);
+                    @include body-2;
                 }
+            }
 
-                h6,
-                button {
-                    flex-grow: 0;
-                }
+            .content {
+                flex: 100%;
+                display: flex;
+                gap: size(20);
+                align-items: stretch;
 
-                h6 {
-                    padding: 0 size(20) size(20);
-                    text-align: center;
-                    border-bottom: size(2) solid color(gray-8);
-                    width: 100%;
-                }
+                .now,
+                .accumulation {
+                    flex: calc(50% - size(16));
+                    align-self: stretch;
+                    border-radius: size(30);
+                    background-color: color(gray-9);
+                    display: flex;
+                    flex-direction: column;
+                    align-items: center;
 
-                .value {
-                    padding: size(40) size(20);
-                    @include font(40, Bold);
+                    h6 {
+                        flex: 1;
+                        flex-grow: 0;
+                        padding: size(20);
+                        text-align: center;
+                        border-bottom: size(2) solid color(gray-8);
+                        width: 100%;
+                    }
 
-                    span {
+                    .value {
+                        flex: 1;
+                        flex-grow: 1;
+                        @include font(40, Bold);
                         display: flex;
                         align-items: center;
                         justify-content: center;
                         gap: size(8);
+                        padding: size(28) size(20);
 
                         img {
                             width: size(24);
                         }
                     }
+
+                    .btn {
+                        min-height: size(64);
+
+                        button {
+                            margin-bottom: size(20);
+                        }
+                    }
+
                 }
-
-            }
-
-            .now {
-                grid-column: 1 / 2;
-            }
-
-            .accumulation {
-                grid-column: 3 / -1;
             }
         }
     }
@@ -295,13 +297,18 @@
                     ul {
                         padding-right: size(8);
 
-                        li {
-                            &.active {
-                                background-color: color(gray-8);
-                            }
+                        >li {
 
                             @media (hover: hover) {
                                 &:hover {
+                                    >a {
+                                        background-color: color(gray-8);
+                                    }
+                                }
+                            }
+
+                            &.active {
+                                >a {
                                     background-color: color(gray-8);
                                 }
                             }
@@ -339,6 +346,11 @@
             justify-content: center;
             text-align: center;
 
+            img {
+                max-width: size(200);
+                margin-bottom: size(32);
+            }
+
             button {
                 margin: size(20) auto;
             }
@@ -367,7 +379,7 @@
     // laptop ~ 1280
     @include max-to(laptop) {
 
-        .linense,
+        .license,
         .zkz {
             flex: 100%;
         }
@@ -453,7 +465,7 @@
         background-image: url(../img/bg/inner-bg-m.jpg);
         padding: 0 size(16);
 
-        .linense {
+        .license {
             .carousel {
                 padding: 0 size(68) size(16);
 
@@ -488,12 +500,29 @@
                 }
             }
         }
+
+        .zkz {
+            .card-content {
+                .content {
+                    flex-wrap: wrap;
+
+                    .now,
+                    .accumulation {
+                        flex: 100%;
+
+                        .btn {
+                            min-height: auto;
+                        }
+                    }
+                }
+            }
+        }
     }
 
 
     // mobile ~ 516
     @include max-to(mobile) {
-        .linense {
+        .license {
             .carousel {
                 padding: 0 size(56) size(16);
 
@@ -523,32 +552,5 @@
                 }
             }
         }
-
-        // .record {
-        //     table {
-        //         tbody {
-        //             tr {
-        //                 td {
-        //                     &.record- {
-
-        //                         &time,
-        //                         &trackno,
-        //                         &status {
-        //                             flex: 100%;
-        //                         }
-
-        //                         &time {
-        //                             order: 2;
-        //                         }
-
-        //                         &status {
-        //                             order: 1;
-        //                         }
-        //                     }
-        //                 }
-        //             }
-        //         }
-        //     }
-        // }
     }
 }
