--- a/pre/scss/components/_fulldown.scss
+++ b/pre/scss/components/_fulldown.scss
@@ -59,6 +59,7 @@
                 max-height: 100lvh;
                 bottom: 0;
                 padding: size(44) size(16) size(16);
+                z-index: 10;
             }
         }
     }
