--- a/pre/scss/mainPage.scss
+++ b/pre/scss/mainPage.scss
@@ -42,6 +42,7 @@ body {
     @import "components/tab";
     @import "components/tables";
     @import "components/popUp";
+    @import "components/toast";
     @import "components/form";
     @import "components/swiper-custom";
 
