--- a/pre/scss/components/_form.scss
+++ b/pre/scss/components/_form.scss
@@ -29,13 +29,14 @@ textarea {
     align-items: center;
     gap: size(8);
 
-    label,
-    input {
+    >label,
+    >input {
         flex: 1;
     }
 
-    label {
+    >label {
         word-break: keep-all;
+        flex-grow: 0;
     }
 
     &+.helper {
@@ -50,7 +51,7 @@ textarea {
     flex-wrap: wrap;
     gap: size(8);
 
-    input {
+    >input {
         flex: 100%;
         width: 100%;
     }
