--- a/pre/scss/components/_form.scss
+++ b/pre/scss/components/_form.scss
@@ -37,6 +37,8 @@ textarea {
     >label {
         word-break: keep-all;
         flex-grow: 0;
+        display: flex;
+        align-items: center;
     }
 
     &+.helper {
