--- a/pre/scss/layout/_main.scss
+++ b/pre/scss/layout/_main.scss
@@ -55,6 +55,15 @@ main {
         }
     }
 
+
+    // small-pad ~ 768
+    @include max-to(small-pad) {
+        &.innerPage {
+            background-image: url(../img/bg/inner-bg-m.jpg);
+        }
+    }
+
+
     // mobile ~ 516
     @include max-to(mobile) {
         margin-top: size(60);
